static/scss/catalog/tabs.scss
// sass-lint:disable mixins-before-declarations

.tooltip {
  .tooltip-inner {
    box-shadow: 0 0.05rem 0.55rem 0.1rem rgb(0 0 0 / 25%);
    color: black;
    background-color: $gray-bg;
    font-size: 18px;
    font-weight: 500;
    padding: 0.25rem 0.75rem;
    max-width: 300px;
  }

  $combinations: ("left", 2px, 0) ("top", 0, 2px) ("right", -2px, 0)
    ("bottom", 0, -2px);

  @each $position, $h-offset, $v-offset in $combinations {
    &.bs-tooltip-#{$position} {
      .arrow {
        filter: drop-shadow($h-offset $v-offset 1px rgb(0 0 0 / 12.5%));
      }

      .arrow::before {
        border-#{$position}-color: $gray-bg;
      }
    }
  }
}

.tab-block {
  width: 100%;
  padding: 0 0 75px;
  min-height: 600px;
  position: relative;

  .container {
    min-width: 880px;
    padding-left: 0;

    @media (width <= 1024px) {
      min-width: unset;
    }
  }

  h1 {
    color: $gray;
    margin: 0 0 15px;
    text-transform: uppercase;
    text-align: center;
    position: relative;
    font-weight: 400;
    z-index: 2;
  }

  .nav-tabs {
    display: flex;
    justify-content: space-between;
    list-style-type: none;
    padding: 0;
    width: 100%;
    margin: 35px 0 0;
    border-bottom: unset;

    @include media-breakpoint-down(sm) {
      margin-left: 15px;
    }

    li {
      letter-spacing: normal;
      display: inline-block;
      vertical-align: bottom;
      font-size: 24px;
      line-height: 30px;
      font-weight: 600;
      text-transform: uppercase;
      float: none;
      padding: 0 15px 0 0;
      flex-grow: 1;
      text-align: left;
      margin: 0 5px;

      @include media-breakpoint-up(md) {
        font-size: 26px;
      }

      @include media-breakpoint-down(md) {
        margin-left: 20px;
      }

      a {
        border: none !important;
        background: white;
        z-index: auto;
        color: $blue;
        margin: 0;
        padding: 0;

        &.active {
          color: $primary;
        }
      }
    }
  }

  .tab-content {
    padding: 30px 0 0;

    @include media-breakpoint-down(md) {
      padding-left: 20px;
    }
  }
}

.nav-tabs-container {
  display: inline-block;
  flex-grow: 1;
}

.catalog-nav-head {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  width: 100%;
  margin-top: 35px;

  @include media-breakpoint-down(sm) {
    display: block;
  }
}

.catalog-sort-by-dropdown {
  margin-left: 20px;
  display: inline-flex;
  padding: 10px;
  white-space: nowrap;
  margin-top: 25px;
  border: 2px solid transparent;

  &.show,
  &:hover {
    border: 2px solid #b8c2cc;
    border-radius: 4px;
    cursor: pointer;
  }

  @include media-breakpoint-down(md) {
    margin-left: 20px;
  }

  @include media-breakpoint-down(sm) {
    margin-left: 23px;
  }

  .dropdown-toggle {
    color: #626a73;

    &::after {
      content: "chevron_right";
      font-family: "Material Icons";
      transform: rotate(90deg);
      line-height: 18px;
      display: inline-block;
      margin-left: unset;
      vertical-align: -3px;
      border-top: unset;
      border-right: unset;
      border-bottom: unset;
      border-left: unset;
    }
  }

  .dropdown-menu {
    background-color: $white;
    box-shadow: 0 2px 4px 0 rgb(37 38 43 / 20%);
    border-radius: 8px;
    right: 0;
    left: unset;
    width: 100%;

    &.show {
      padding: 12px 0;
    }

    .dropdown-item {
      color: #626a73;
      font-size: 18px;
      font-weight: 400;
      padding: 8px 16px;

      &:hover {
        background-color: $white;
        color: $primary;
        text-decoration: underline;
      }
    }

    .selected {
      background-color: $white;
      color: $primary;
      text-decoration: underline;
    }
  }
}

.catalog-filter-dropdown {
  @extend .catalog-sort-by-dropdown;

  display: block;
  margin-left: 0;
  border: none;
  margin-bottom: 32px;
  padding: 0;

  &.show,
  &:hover {
    border: none;
  }

  .dropdown-toggle {
    border: 1px solid #dde1ec;
    padding: 16px;
    width: 220px;
    border-radius: 4px;
    text-wrap-mode: wrap;

    &::after {
      float: right;
    }
  }

  .dropdown-menu {
    .dropdown-item {
      text-wrap-mode: wrap;
      line-height: 25px;
      margin-top: 0;
    }
  }

  .col-2 {
    max-width: 100%;
  }
}

